// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerTitle renders 1`] = `
<styled.div>
  <TestBannerTitle>
    foo
  </TestBannerTitle>
</styled.div>
`;

exports[`BannerTitle renders child text  1`] = `
<styled.div>
  <TestBannerTitle>
    Here is a test title!
  </TestBannerTitle>
</styled.div>
`;
